# HabitLab

./: README.md
mobile/: .env.example  app.json  jest.config.js  jest.setup.js  package.json  pnpm-lock.yaml  tsconfig.json
mobile/__mocks__/: emptyMock.js
mobile/__tests__/: CheckinScreen.test.tsx  StartScreen.test.tsx
mobile/api/: auth.ts  experiments.ts  index.ts
mobile/app/: _layout.tsx  checkin.tsx  index.tsx  start.tsx
mobile/components/: CustomTabBar.tsx  NotificationSettings.tsx  SourceToggle.tsx
mobile/lib/: mmkv.ts
mobile/services/: health.ts  (+1 more)
server/: .dockerignore  .example.env  .gitignore  dev.Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  prod.Dockerfile  pyproject.toml  run.sh
server/accounts/: google.py  helper.py  models.py  serializers.py  tokens.py  urls.py  views.py
server/accounts/migrations/: 0001_initial.py  0002_user_google_sub.py  0003_emailotp.py  0004_user_is_verified.py
server/accounts/tests/: test_auth.py
server/experiments/: helper.py  llm.py  models.py  serializers.py  urls.py  utils.py  views.py
server/experiments/migrations/: 0001_initial.py  0002_experimenttemplate_remove_dailycheckin_completed_and_more.py  0003_baseline_confidence_score_and_more.py  0004_alter_dailycheckin_user_experiment.py  0005_remove_experimentresult_habit_score_after_and_more.py  0006_subexperiment_subexperimentcheckin.py  0007_experimenttemplate_sub_experiments.py  0008_baseline_active_minutes_avg_baseline_sleep_avg_and_more.py
server/experiments/tests/: test_experiment.py
server/server/: settings.py  urls.py
(+30 files in other folders)
